# dlp

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev.env  docker-compose.yaml  pyproject.toml
admin/: __init__.py  views.py  web.py
alembic/: env.py
alembic/versions/: 1197c147d10c_added_account_table.py  54ebbf24d665_added_regexp_leakage.py
celery_worker/: __init__.py  settings.py  task.py  worker.py
database/: __init__.py  base.py  leak.py  regexp_rule.py  session.py  settings.py
db/: __init__.py  base.py  leak.py  regexp_rule.py  session.py  settings.py
dependencies/: __init__.py  container.py
entrypoints/: admin.sh  celery.sh  migration_runner.sh  web.sh
leak_finder/: finder.py  regexp.py
models/: __init__.py  leakage.py
regexp_getter/: __init__.py  getter.py  redis_getter.py  settings.py
regexp_holder/: __init__.py  holder.py  in_memory_holder.py  redis_holder.py  settings.py
storage/: __init__.py  db_storage.py  in_memory_storage.py  leak_storage.py
tests/: test_leak_finder.py
web/: routes.py  web.py
